--- a/packages/atoms-extra/net/app-misc/screen/definition.yaml
+++ b/packages/atoms-extra/net/app-misc/screen/definition.yaml
@@ -1,5 +1,5 @@
 name: screen
-version: 4.9.0
+version: 4.9.1
 category: app-misc
 use_flags:
 - -pam
@@ -23,9 +23,9 @@ uri:
 - https://www.gnu.org/software/screen/
 license: GPL-2
 labels:
-  BDEPEND: sys-apps/texinfo >=app-portage/elt-patches-20170815 !<sys-devel/gettext-0.18.1.1-r3
+  BDEPEND: '>=sys-apps/texinfo-7 >=app-portage/elt-patches-20170815 !<sys-devel/gettext-0.18.1.1-r3
     || ( >=sys-devel/automake-1.16.1:1.16 >=sys-devel/automake-1.15.1:1.15 ) >=sys-devel/autoconf-2.69
-    >=sys-devel/libtool-2.4
+    >=sys-devel/libtool-2.4'
   DEPEND: '>=sys-libs/ncurses-5.2:= pam? ( sys-libs/pam )'
   IUSE: debug nethack pam selinux multiuser
   RDEPEND: '>=sys-libs/ncurses-5.2:= pam? ( sys-libs/pam ) selinux? ( sec-policy/selinux-screen
@@ -34,4 +34,4 @@ labels:
   kit: core-kit
   original.package.name: app-misc/screen
   original.package.slot: "0"
-  original.package.version: 4.9.0
+  original.package.version: 4.9.1
