--- a/packages/atoms/emulation2/sys-block/open-iscsi/build.yaml
+++ b/packages/atoms/emulation2/sys-block/open-iscsi/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary
+- >-
+  cd /var/git/extra-kits/geaaru-kit/ &&
+  git checkout funtoo &&
+  git pull -ff &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
