--- a/packages/atoms/base-fs/sys-block/parted/definition.yaml
+++ b/packages/atoms/base-fs/sys-block/parted/definition.yaml
@@ -1,16 +1,22 @@
 name: parted
-version: "3.2"
+version: 3.2+1
 category: sys-block
 use_flags:
-- -device-mapper
 - -elibc_uclibc
-- -readline
 - -selinux
+- device-mapper
 - nls
+- readline
 requires:
 - name: e2fsprogs
   version: '>=0'
   category: sys-fs
+- name: lvm2
+  version: '>=0'
+  category: sys-fs
+- name: readline
+  version: '>=0'
+  category: sys-libs
 annotations:
   subsets:
     rules:
