--- a/packages/atoms/emulation2/sys-process/criu/build.yaml
+++ b/packages/atoms/emulation2/sys-process/criu/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary patch until the fix is available on upstream.
+- >-
+  cp criu*.ebuild /var/git/meta-repo/kits/core-kit/sys-process/criu/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
