--- a/packages/atoms/office/app-office/libreoffice-l10n/build.yaml
+++ b/packages/atoms/office/app-office/libreoffice-l10n/build.yaml
@@ -1,7 +1,6 @@
-env:
-- "L10N=ach af an ar ast az be bg bn br bs ca cavalencia cak cs cy da de dsb el enCA enGB enUS eo esAR esCL esES esMX et eu fa ff fi fr fur fyNL gaIE gd gl gn guIN he hiIN hr hsb hu hyAM ia id is it ja ka kab kk km kn ko lij lt lv mk mr ms my nbNO neNP nl nnNO oc paIN pl ptBR ptPT rm ro ru sc sco si sk sl son sq sr svSE szl ta te tg th tl tr trs uk ur uz vi xh zhCN zhTW"
 prelude:
 - |-
+  export L10N="ach af an ar ast az be bg bn br bs ca cavalencia cak cs cy da de dsb el enCA enGB enUS eo esAR esCL esES esMX et eu fa ff fi fr fur fyNL gaIE gd gl gn guIN he hiIN hr hsb hu hyAM ia id is it ja ka kab kk km kn ko lij lt lv mk mr ms my nbNO neNP nl nnNO oc paIN pl ptBR ptPT rm ro ru sc sco si sk sl son sq sr svSE szl ta te tg th tl tr trs uk ur uz vi xh zhCN zhTW" && \
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
