--- a/packages/atoms/java/dev-java-1.8/oracle-jdk-bin/build.yaml
+++ b/packages/atoms/java/dev-java-1.8/oracle-jdk-bin/build.yaml
@@ -29,6 +29,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: zip
+- name: java-config
   version: '>=0'
-  category: app-arch
+  category: dev-java-2
