--- a/packages/atoms/base-tools2/sys-process/procs/definition.yaml
+++ b/packages/atoms/base-tools2/sys-process/procs/definition.yaml
@@ -1,5 +1,5 @@
 name: procs
-version: 0.14.0+1
+version: 0.14.1
 category: sys-process
 annotations:
   subsets:
@@ -19,4 +19,4 @@ labels:
   kit: core-kit
   original.package.name: sys-process/procs
   original.package.slot: "0"
-  original.package.version: 0.14.0
+  original.package.version: 0.14.1
