--- a/packages/atoms-extra/server/app-admin/cloud-init/definition.yaml
+++ b/packages/atoms-extra/server/app-admin/cloud-init/definition.yaml
@@ -1,5 +1,5 @@
 name: cloud-init
-version: "23.3"
+version: 23.3.1
 category: app-admin
 use_flags:
 - -python_targets_python3_10
@@ -97,4 +97,4 @@ labels:
   kit: core-server-kit
   original.package.name: app-admin/cloud-init
   original.package.slot: "0"
-  original.package.version: "23.3"
+  original.package.version: 23.3.1
