--- a/packages/atoms-extra/server/app-emulation/docker/definition.yaml
+++ b/packages/atoms-extra/server/app-emulation/docker/definition.yaml
@@ -1,5 +1,5 @@
 name: docker
-version: 20.10.17
+version: 24.0.6
 category: app-emulation
 use_flags:
 - -apparmor
@@ -55,21 +55,20 @@ uri:
 - https://www.docker.com/
 license: Apache-2.0
 labels:
-  BDEPEND: '>=dev-lang/go-1.16.12 dev-go/go-md2man virtual/pkgconfig >=dev-lang/go-1.10
+  BDEPEND: '>=dev-lang/go-1.19.12 dev-go/go-md2man virtual/pkgconfig >=dev-lang/go-1.10
     virtual/pkgconfig virtual/pkgconfig'
   DEPEND: '>=dev-db/sqlite-3.7.9:3 apparmor? ( sys-libs/libapparmor ) btrfs? ( >=sys-fs/btrfs-progs-3.16.1
     ) device-mapper? ( >=sys-fs/lvm2-2.02.89[thin] ) seccomp? ( >=sys-libs/libseccomp-2.2.1
     ) sys-apps/shadow'
-  IUSE: apparmor aufs btrfs +cli +container-init device-mapper hardened overlay seccomp
-    kernel_linux
+  IUSE: apparmor btrfs +container-init device-mapper overlay seccomp kernel_linux
   RDEPEND: '>=dev-db/sqlite-3.7.9:3 apparmor? ( sys-libs/libapparmor ) btrfs? ( >=sys-fs/btrfs-progs-3.16.1
     ) device-mapper? ( >=sys-fs/lvm2-2.02.89[thin] ) seccomp? ( >=sys-libs/libseccomp-2.2.1
     ) >=net-firewall/iptables-1.4 sys-process/procps >=dev-vcs/git-1.7 >=app-arch/xz-utils-4.9
-    dev-libs/libltdl >=app-emulation/containerd-1.6.4[apparmor?,btrfs?,device-mapper?,seccomp?]
-    ~app-emulation/docker-proxy-0.8.0_p20220315 cli? ( ~app-emulation/docker-cli-20.10.17
-    ) container-init? ( >=sys-process/tini-0.19.0[static] )'
+    dev-libs/libltdl >=app-emulation/containerd-1.7.1[apparmor?,btrfs?,device-mapper?,seccomp?]
+    !app-emulation/docker-proxy container-init? ( >=sys-process/tini-0.19.0[static]
+    )'
   emerge.packages: app-emulation/docker
   kit: core-kit
   original.package.name: app-emulation/docker
   original.package.slot: "0"
-  original.package.version: 20.10.17
+  original.package.version: 24.0.6
