--- a/packages/atoms-extra/server/dev-libs/libbson/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/libbson/build.yaml
@@ -6,6 +6,9 @@ env:
 - LUET_PORTAGE_PKGFILES=1
 - FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox"
 prelude:
+# Temporary patch libbson ebuild (see FL-11724)
+- >-
+  cp libbson-1.24.4.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/libbson/
 - |
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
   chown portage:portage -R /var/cache/portage/ && \
