--- a/packages/atoms/browsers/www-client/firefox/definition.yaml
+++ b/packages/atoms/browsers/www-client/firefox/definition.yaml
@@ -1,5 +1,5 @@
 name: firefox
-version: 116.0.1+4
+version: 118.0.2
 category: www-client
 use_flags:
 - -clang
@@ -125,15 +125,15 @@ labels:
     !!sys-devel/llvm:0 dev-util/desktop-file-utils x11-misc/shared-mime-info
   IUSE: +clang cpu_flags_arm_neon dbus debug eme-free hardened hwaccel jack libproxy
     lto +openh264 pgo pulseaudio sndio selinux system-av1 system-harfbuzz +system-icu
-    +system-jpeg +system-libevent system-libvpx system-png system-webp wayland wifi
-    l10n_ach l10n_af l10n_an l10n_ar l10n_ast l10n_az l10n_be l10n_bg l10n_bn l10n_br
-    l10n_bs l10n_ca-valencia l10n_ca l10n_cak l10n_cs l10n_cy l10n_da l10n_de l10n_dsb
-    l10n_el l10n_en-CA l10n_en-GB l10n_en-US l10n_eo l10n_es-AR l10n_es-CL l10n_es-ES
-    l10n_es-MX l10n_et l10n_eu l10n_fa l10n_ff l10n_fi l10n_fr l10n_fur l10n_fy-NL
-    l10n_ga-IE l10n_gd l10n_gl l10n_gn l10n_gu-IN l10n_he l10n_hi-IN l10n_hr l10n_hsb
-    l10n_hu l10n_hy-AM l10n_ia l10n_id l10n_is l10n_it l10n_ja l10n_ka l10n_kab l10n_kk
-    l10n_km l10n_kn l10n_ko l10n_lij l10n_lt l10n_lv l10n_mk l10n_mr l10n_ms l10n_my
-    l10n_nb-NO l10n_ne-NP l10n_nl l10n_nn-NO l10n_oc l10n_pa-IN l10n_pl l10n_pt-BR
+    +system-jpeg +system-libevent system-libvpx system-png system-python-libs system-webp
+    wayland wifi l10n_ach l10n_af l10n_an l10n_ar l10n_ast l10n_az l10n_be l10n_bg
+    l10n_bn l10n_br l10n_bs l10n_ca-valencia l10n_ca l10n_cak l10n_cs l10n_cy l10n_da
+    l10n_de l10n_dsb l10n_el l10n_en-CA l10n_en-GB l10n_en-US l10n_eo l10n_es-AR l10n_es-CL
+    l10n_es-ES l10n_es-MX l10n_et l10n_eu l10n_fa l10n_ff l10n_fi l10n_fr l10n_fur
+    l10n_fy-NL l10n_ga-IE l10n_gd l10n_gl l10n_gn l10n_gu-IN l10n_he l10n_hi-IN l10n_hr
+    l10n_hsb l10n_hu l10n_hy-AM l10n_ia l10n_id l10n_is l10n_it l10n_ja l10n_ka l10n_kab
+    l10n_kk l10n_km l10n_kn l10n_ko l10n_lij l10n_lt l10n_lv l10n_mk l10n_mr l10n_ms
+    l10n_my l10n_nb-NO l10n_ne-NP l10n_nl l10n_nn-NO l10n_oc l10n_pa-IN l10n_pl l10n_pt-BR
     l10n_pt-PT l10n_rm l10n_ro l10n_ru l10n_sc l10n_sco l10n_si l10n_sk l10n_sl l10n_son
     l10n_sq l10n_sr l10n_sv-SE l10n_szl l10n_ta l10n_te l10n_tg l10n_th l10n_tl l10n_tr
     l10n_trs l10n_uk l10n_ur l10n_uz l10n_vi l10n_xh l10n_zh-CN l10n_zh-TW geckodriver
@@ -161,4 +161,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/firefox
   original.package.slot: "0"
-  original.package.version: 116.0.1
+  original.package.version: 118.0.2
