--- a/packages/atoms/browsers/www-client/vivaldi/definition.yaml
+++ b/packages/atoms/browsers/www-client/vivaldi/definition.yaml
@@ -1,5 +1,5 @@
 name: vivaldi
-version: 6.1.3035.111+1
+version: 6.2.3105.58
 category: www-client
 use_flags:
 - -widevine
@@ -64,4 +64,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/vivaldi
   original.package.slot: "0"
-  original.package.version: 6.1.3035.111
+  original.package.version: 6.2.3105.58
