--- a/packages/atoms/server/app-admin/rsyslog/definition.yaml
+++ b/packages/atoms/server/app-admin/rsyslog/definition.yaml
@@ -1,5 +1,5 @@
 name: rsyslog
-version: 8.2306.0+1
+version: 8.2310.0
 category: app-admin
 use_flags:
 - -clickhouse
@@ -131,4 +131,4 @@ labels:
   kit: core-server-kit
   original.package.name: app-admin/rsyslog
   original.package.slot: "0"
-  original.package.version: 8.2306.0
+  original.package.version: 8.2310.0
