--- a/packages/atoms/emulation2/app-emulation/libvirt/definition.yaml
+++ b/packages/atoms/emulation2/app-emulation/libvirt/definition.yaml
@@ -1,5 +1,5 @@
 name: libvirt
-version: 9.6.0+1
+version: 9.8.0
 category: app-emulation
 use_flags:
 - -apparmor
@@ -158,4 +158,4 @@ labels:
   kit: core-kit
   original.package.name: app-emulation/libvirt
   original.package.slot: "0"
-  original.package.version: 9.6.0
+  original.package.version: 9.8.0
