--- a/packages/atoms/office/app-office/libreoffice-bin/definition.yaml
+++ b/packages/atoms/office/app-office/libreoffice-bin/definition.yaml
@@ -1,5 +1,5 @@
 name: libreoffice-bin
-version: 7.5.5.2
+version: 7.6.2.1
 category: app-office
 use_flags:
 - -java
@@ -164,57 +164,21 @@ uri:
 - https://www.libreoffice.org
 license: LGPL-3
 labels:
-  DEPEND: =app-text/libexttextcat-3.4* =app-text/libmwaw-0.3* >=dev-libs/icu-64.2
-    >=media-gfx/graphite2-1.3.10 >=media-libs/harfbuzz-2.6.4:0=[graphite,icu] media-libs/libpng:0/16
-    >=sys-devel/gcc-8.3.0 >=sys-libs/glibc-2.29 virtual/jpeg-compat:62 app-arch/unzip
-    app-arch/zip app-crypt/gpgme[cxx] app-text/hunspell:= >=app-text/libabw-0.1.0
-    >=app-text/libebook-0.1 app-text/libepubgen app-text/libexttextcat app-text/liblangtag
-    >=app-text/libmspub-0.1.0 >=app-text/libmwaw-0.3.1 app-text/libnumbertext >=app-text/libodfgen-0.1.0
-    app-text/libqxp app-text/libstaroffice app-text/libwpd:0.10[tools] app-text/libwpg:0.3
-    >=app-text/libwps-0.4 app-text/mythes >=dev-cpp/clucene-2.3.3.4-r2 =dev-cpp/libcmis-0.5*
-    dev-db/unixODBC dev-lang/perl dev-libs/boost:=[nls] dev-libs/expat dev-libs/hyphen
-    dev-libs/icu:= dev-libs/libassuan dev-libs/libgpg-error dev-libs/librevenge dev-libs/libxml2
-    dev-libs/libxslt dev-libs/nspr dev-libs/nss >=dev-libs/redland-1.0.16 >=dev-libs/xmlsec-1.2.24[nss]
-    media-gfx/fontforge media-gfx/graphite2 media-libs/fontconfig media-libs/freetype:2
-    media-libs/lcms:2 >=media-libs/libcdr-0.1.0 >=media-libs/libepoxy-1.3.1[X] >=media-libs/libfreehand-0.1.0
-    media-libs/libpagemaker >=media-libs/libpng-1.4:0= >=media-libs/libvisio-0.1.0
-    media-libs/libzmf net-libs/neon net-misc/curl sci-mathematics/lpsolve sys-libs/zlib
-    virtual/glu virtual/jpeg:0 virtual/opengl x11-libs/cairo[X] x11-libs/libXinerama
-    x11-libs/libXrandr x11-libs/libXrender net-print/cups sys-apps/dbus gnome? ( gnome-extra/evolution-data-server
-    ) gstreamer? ( media-libs/gstreamer:1.0 ) media-libs/gst-plugins-base:1.0 gtk?
-    ( dev-libs/glib:2 dev-libs/gobject-introspection gnome-base/dconf media-libs/mesa[egl]
-    x11-libs/gtk+:3 x11-libs/pango ) kde? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5
-    dev-qt/qtx11extras:5 kde-frameworks/kconfig:5 kde-frameworks/kcoreaddons:5 kde-frameworks/ki18n:5
-    kde-frameworks/kio:5 kde-frameworks/kwindowsystem:5 ) dev-db/mariadb-connector-c
-    net-dns/avahi >=app-arch/rpm2targz-9.0.0.3g
-  IUSE: gnome gstreamer +gtk java kde
+  DEPEND: '>=app-arch/rpm2targz-9.0.0.3g'
+  IUSE: gnome +gtk java kde
   RDEPEND: =app-text/libexttextcat-3.4* =app-text/libmwaw-0.3* >=dev-libs/icu-64.2
-    >=media-gfx/graphite2-1.3.10 >=media-libs/harfbuzz-2.6.4:0=[graphite,icu] media-libs/libpng:0/16
-    >=sys-devel/gcc-8.3.0 >=sys-libs/glibc-2.29 virtual/jpeg-compat:62 app-arch/unzip
-    app-arch/zip app-crypt/gpgme[cxx] app-text/hunspell:= >=app-text/libabw-0.1.0
-    >=app-text/libebook-0.1 app-text/libepubgen app-text/libexttextcat app-text/liblangtag
-    >=app-text/libmspub-0.1.0 >=app-text/libmwaw-0.3.1 app-text/libnumbertext >=app-text/libodfgen-0.1.0
-    app-text/libqxp app-text/libstaroffice app-text/libwpd:0.10[tools] app-text/libwpg:0.3
-    >=app-text/libwps-0.4 app-text/mythes >=dev-cpp/clucene-2.3.3.4-r2 =dev-cpp/libcmis-0.5*
-    dev-db/unixODBC dev-lang/perl dev-libs/boost:=[nls] dev-libs/expat dev-libs/hyphen
-    dev-libs/icu:= dev-libs/libassuan dev-libs/libgpg-error dev-libs/librevenge dev-libs/libxml2
-    dev-libs/libxslt dev-libs/nspr dev-libs/nss >=dev-libs/redland-1.0.16 >=dev-libs/xmlsec-1.2.24[nss]
-    media-gfx/fontforge media-gfx/graphite2 media-libs/fontconfig media-libs/freetype:2
-    media-libs/lcms:2 >=media-libs/libcdr-0.1.0 >=media-libs/libepoxy-1.3.1[X] >=media-libs/libfreehand-0.1.0
-    media-libs/libpagemaker >=media-libs/libpng-1.4:0= >=media-libs/libvisio-0.1.0
-    media-libs/libzmf net-libs/neon net-misc/curl sci-mathematics/lpsolve sys-libs/zlib
-    virtual/glu virtual/jpeg:0 virtual/opengl x11-libs/cairo[X] x11-libs/libXinerama
-    x11-libs/libXrandr x11-libs/libXrender net-print/cups sys-apps/dbus gnome? ( gnome-extra/evolution-data-server
-    ) gstreamer? ( media-libs/gstreamer:1.0 ) media-libs/gst-plugins-base:1.0 gtk?
-    ( dev-libs/glib:2 dev-libs/gobject-introspection gnome-base/dconf media-libs/mesa[egl]
-    x11-libs/gtk+:3 x11-libs/pango ) kde? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5
-    dev-qt/qtx11extras:5 kde-frameworks/kconfig:5 kde-frameworks/kcoreaddons:5 kde-frameworks/ki18n:5
-    kde-frameworks/kio:5 kde-frameworks/kwindowsystem:5 ) dev-db/mariadb-connector-c
-    net-dns/avahi !app-office/libreoffice !app-office/openoffice media-fonts/liberation-fonts
-    || ( x11-misc/xdg-utils kde-plasma/kde-cli-tools ) java? ( >=virtual/jre-1.6 )
-    kde? ( kde-frameworks/breeze-icons:* ) app-crypt/mit-krb5
+    >=media-gfx/graphite2-1.3.10 >=media-libs/harfbuzz-2.6.4:0=[graphite,icu] app-crypt/mit-krb5
+    dev-libs/glib dev-libs/nspr dev-libs/nss media-libs/fontconfig media-libs/freetype
+    media-libs/gst-plugins-base media-libs/gstreamer net-dns/avahi net-print/cups
+    sys-apps/dbus sys-devel/gcc sys-libs/e2fsprogs-libs sys-libs/glibc sys-libs/zlib
+    x11-libs/libICE x11-libs/libSM x11-libs/libXext x11-libs/libXinerama x11-libs/libXrandr
+    x11-libs/libXrender app-arch/unzip app-arch/zip !app-office/libreoffice !app-office/openoffice
+    media-fonts/liberation-fonts java? ( >=virtual/jre-1.6 ) gtk? ( dev-libs/atk x11-libs/cairo
+    x11-libs/gdk-pixbuf x11-libs/gtk+ x11-libs/pango ) kde? ( dev-qt/qtcore:5 dev-qt/qtgui:5
+    dev-qt/qtwidgets:5 dev-qt/qtx11extras:5 kde-frameworks/kconfig:5 kde-frameworks/kcoreaddons:5
+    kde-frameworks/ki18n:5 kde-frameworks/kio:5 kde-frameworks/kwindowsystem:5 )
   emerge.packages: app-office/libreoffice-bin
   kit: desktop-kit
   original.package.name: app-office/libreoffice-bin
   original.package.slot: "0"
-  original.package.version: 7.5.5.2
+  original.package.version: 7.6.2.1
