--- a/packages/atoms/desktop2/media-libs/opencv/definition.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/definition.yaml
@@ -1,5 +1,5 @@
 name: opencv
-version: 4.8.0+8
+version: 4.8.1
 category: media-libs
 use_flags:
 - -cuda
@@ -139,4 +139,4 @@ labels:
   kit: media-kit
   original.package.name: media-libs/opencv
   original.package.slot: "0"
-  original.package.version: 4.8.0
+  original.package.version: 4.8.1
