--- a/packages/atoms/desktop2/media-sound/mpd/definition.yaml
+++ b/packages/atoms/desktop2/media-sound/mpd/definition.yaml
@@ -1,5 +1,5 @@
 name: mpd
-version: 0.23.13+1
+version: 0.23.14
 category: media-sound
 use_flags:
 - -ao
@@ -168,4 +168,4 @@ labels:
   kit: media-kit
   original.package.name: media-sound/mpd
   original.package.slot: "0"
-  original.package.version: 0.23.13
+  original.package.version: 0.23.14
