--- a/packages/atoms/desktop2/media-libs/libopenshot/definition.yaml
+++ b/packages/atoms/desktop2/media-libs/libopenshot/definition.yaml
@@ -1,5 +1,5 @@
 name: libopenshot
-version: 0.2.7+2
+version: 0.3.2
 category: media-libs
 use_flags:
 - -doc
@@ -51,7 +51,7 @@ labels:
   DEPEND: dev-libs/jsoncpp:0= dev-libs/protobuf:= dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtmultimedia:5[widgets]
     >=media-libs/libopenshot-audio-0.2.1:0= media-video/ffmpeg:0=[encode,x264,xvid,vpx,mp3,theora,vorbis]
     net-libs/cppzmq net-libs/zeromq imagemagick? ( >=media-gfx/imagemagick-7:0=[cxx]
-    ) opencv? ( >=media-libs/opencv-4.5.2:=[contrib,contribdnn] ) python? ( python_single_target_python3_7?
+    ) opencv? ( >=media-libs/opencv-4.5.2:=[contrib] ) python? ( python_single_target_python3_7?
     ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7] ) python_single_target_python3_9?
     ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9] ) python_single_target_python3_8?
     ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8] ) python_single_target_python3_10?
@@ -63,14 +63,14 @@ labels:
   RDEPEND: dev-libs/jsoncpp:0= dev-libs/protobuf:= dev-qt/qtcore:5 dev-qt/qtgui:5
     dev-qt/qtmultimedia:5[widgets] >=media-libs/libopenshot-audio-0.2.1:0= media-video/ffmpeg:0=[encode,x264,xvid,vpx,mp3,theora,vorbis]
     net-libs/cppzmq net-libs/zeromq imagemagick? ( >=media-gfx/imagemagick-7:0=[cxx]
-    ) opencv? ( >=media-libs/opencv-4.5.2:=[contrib,contribdnn] ) python? ( python_single_target_python3_7?
+    ) opencv? ( >=media-libs/opencv-4.5.2:=[contrib] ) python? ( python_single_target_python3_7?
     ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7] ) python_single_target_python3_9?
     ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9] ) python_single_target_python3_8?
     ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8] ) python_single_target_python3_10?
     ( dev-lang/python:3.10 >=dev-lang/python-exec-2:=[python_targets_python3_10] )
     )
   emerge.packages: media-libs/libopenshot
-  kit: media-kit
+  kit: geaaru-kit
   original.package.name: media-libs/libopenshot
   original.package.slot: "0"
-  original.package.version: 0.2.7-r1
+  original.package.version: 0.3.2
