--- a/packages/atoms/desktop2/media-video-1/openshot/definition.yaml
+++ b/packages/atoms/desktop2/media-video-1/openshot/definition.yaml
@@ -1,5 +1,5 @@
 name: openshot
-version: 2.6.1
+version: 3.1.1
 category: media-video-1
 use_flags:
 - -doc
@@ -48,42 +48,21 @@ labels:
     ) python_single_target_python3_8? ( >=dev-python/setuptools-42.0.2[python_targets_python3_8(-)]
     ) python_single_target_python3_10? ( >=dev-python/setuptools-42.0.2[python_targets_python3_10(-)]
     )
-  DEPEND: python_single_target_python3_7? ( dev-python/httplib2[python_targets_python3_7(-)]
-    dev-python/PyQt5[python_targets_python3_7(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_7(-)] dev-python/PyQtWebEngine[python_targets_python3_7(-)]
-    dev-python/pyzmq[python_targets_python3_7(-)] dev-python/requests[python_targets_python3_7(-)]
-    ) python_single_target_python3_9? ( dev-python/httplib2[python_targets_python3_9(-)]
-    dev-python/PyQt5[python_targets_python3_9(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_9(-)] dev-python/PyQtWebEngine[python_targets_python3_9(-)]
-    dev-python/pyzmq[python_targets_python3_9(-)] dev-python/requests[python_targets_python3_9(-)]
-    ) python_single_target_python3_8? ( dev-python/httplib2[python_targets_python3_8(-)]
-    dev-python/PyQt5[python_targets_python3_8(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_8(-)] dev-python/PyQtWebEngine[python_targets_python3_8(-)]
-    dev-python/pyzmq[python_targets_python3_8(-)] dev-python/requests[python_targets_python3_8(-)]
-    ) python_single_target_python3_10? ( dev-python/httplib2[python_targets_python3_10(-)]
-    dev-python/PyQt5[python_targets_python3_10(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_10(-)] dev-python/PyQtWebEngine[python_targets_python3_10(-)]
-    dev-python/pyzmq[python_targets_python3_10(-)] dev-python/requests[python_targets_python3_10(-)]
-    ) >=media-libs/libopenshot-0.2.7:0=[python,python_single_target_python3_7(-)?,python_single_target_python3_9(-)?,python_single_target_python3_8(-)?,python_single_target_python3_10(-)?]
-    dev-util/desktop-file-utils x11-misc/shared-mime-info
+  DEPEND: dev-util/desktop-file-utils x11-misc/shared-mime-info
   IUSE: doc python_single_target_python3_7 python_single_target_python3_9 python_single_target_python3_8
     python_single_target_python3_10 python_targets_python3_7 python_targets_python3_9
     python_targets_python3_8 python_targets_python3_10
   RDEPEND: python_single_target_python3_7? ( dev-python/httplib2[python_targets_python3_7(-)]
-    dev-python/PyQt5[python_targets_python3_7(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_7(-)] dev-python/PyQtWebEngine[python_targets_python3_7(-)]
+    dev-python/PyQt5[python_targets_python3_7(-),gui,svg,widgets] dev-python/PyQtWebEngine[python_targets_python3_7(-)]
     dev-python/pyzmq[python_targets_python3_7(-)] dev-python/requests[python_targets_python3_7(-)]
     ) python_single_target_python3_9? ( dev-python/httplib2[python_targets_python3_9(-)]
-    dev-python/PyQt5[python_targets_python3_9(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_9(-)] dev-python/PyQtWebEngine[python_targets_python3_9(-)]
+    dev-python/PyQt5[python_targets_python3_9(-),gui,svg,widgets] dev-python/PyQtWebEngine[python_targets_python3_9(-)]
     dev-python/pyzmq[python_targets_python3_9(-)] dev-python/requests[python_targets_python3_9(-)]
     ) python_single_target_python3_8? ( dev-python/httplib2[python_targets_python3_8(-)]
-    dev-python/PyQt5[python_targets_python3_8(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_8(-)] dev-python/PyQtWebEngine[python_targets_python3_8(-)]
+    dev-python/PyQt5[python_targets_python3_8(-),gui,svg,widgets] dev-python/PyQtWebEngine[python_targets_python3_8(-)]
     dev-python/pyzmq[python_targets_python3_8(-)] dev-python/requests[python_targets_python3_8(-)]
     ) python_single_target_python3_10? ( dev-python/httplib2[python_targets_python3_10(-)]
-    dev-python/PyQt5[python_targets_python3_10(-),gui,svg,widgets,webchannel,multimedia]
-    dev-python/PyQt5-sip[python_targets_python3_10(-)] dev-python/PyQtWebEngine[python_targets_python3_10(-)]
+    dev-python/PyQt5[python_targets_python3_10(-),gui,svg,widgets] dev-python/PyQtWebEngine[python_targets_python3_10(-)]
     dev-python/pyzmq[python_targets_python3_10(-)] dev-python/requests[python_targets_python3_10(-)]
     ) >=media-libs/libopenshot-0.2.7:0=[python,python_single_target_python3_7(-)?,python_single_target_python3_9(-)?,python_single_target_python3_8(-)?,python_single_target_python3_10(-)?]
     python_single_target_python3_7? ( dev-lang/python:3.7[xml] >=dev-lang/python-exec-2:=[python_targets_python3_7]
@@ -92,7 +71,7 @@ labels:
     ) python_single_target_python3_10? ( dev-lang/python:3.10[xml] >=dev-lang/python-exec-2:=[python_targets_python3_10]
     )
   emerge.packages: media-video/openshot:1
-  kit: media-kit
+  kit: geaaru-kit
   original.package.name: media-video/openshot
   original.package.slot: "1"
-  original.package.version: 2.6.1
+  original.package.version: 3.1.1
