--- a/packages/seeds/macaroni-kernel-6.1/definition.yaml
+++ b/packages/seeds/macaroni-kernel-6.1/definition.yaml
@@ -1,6 +1,6 @@
 name: kernel
-version: 6.1.49+1
+version: 6.1.59
 category: seed-6.1
 hidden: true
 labels:
-  kernel.version: 6.1.49
+  kernel.version: 6.1.59
