--- a/packages/kernels/5.10/lkrg/definition.yaml
+++ b/packages/kernels/5.10/lkrg/definition.yaml
@@ -1,9 +1,9 @@
 name: lkrg
-version: 0.9.6+7
+version: 0.9.7
 category: kernel-5.10
 annotations:
   kernel_module: true
 labels:
   emerge.packages: app-antivirus/lkrg
   kernel.suffix: macaroni
-  kernel.version: 5.10.192
+  kernel.version: 5.10.198
