--- a/packages/kernels/6.5/nvidia-drivers/definition.yaml
+++ b/packages/kernels/6.5/nvidia-drivers/definition.yaml
@@ -1,5 +1,5 @@
 name: nvidia-kernel-modules
-version: 535.86.05
+version: 535.86.05+1
 category: kernel-6.5
 requires:
 - name: nvidia-drivers-common
