--- a/packages/kernels/5.4/nvidia-drivers/build.yaml
+++ b/packages/kernels/5.4/nvidia-drivers/build.yaml
@@ -7,7 +7,7 @@ env:
 package_dir: /{{ .Values.name }}
 steps:
 - >-
-  epro list &&
+  luet i -y nvidia-drivers && luet cleanup &&
   {{- if .Values.use_flags }}
   USE="{{ join " " .Values.use_flags }}" emerge {{ ( index .Values.labels "emerge.packages" ) }} -pv -t
   {{- else }}
