--- a/packages/kernels/5.4/virtualbox-modules/definition.yaml
+++ b/packages/kernels/5.4/virtualbox-modules/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-modules
-version: 7.0.8.156879+4
+version: 7.0.10.158379
 category: kernel-5.4
 requires:
 - name: virtualbox-common
