--- a/packages/atoms/release/sys-apps/lsb-release/definition.yaml
+++ b/packages/atoms/release/sys-apps/lsb-release/definition.yaml
@@ -1,5 +1,5 @@
 name: lsb-release
-version: "1.4+21"
+version: 1.4+22
 category: sys-apps
 annotations:
   subsets:
@@ -15,8 +15,8 @@ license: GPL-2
 labels:
   DEPEND: dev-lang/perl
   emerge.packages: sys-apps/lsb-release
-  macaroni.version: "23.09"
   kit: core-kit
+  macaroni.version: "23.11"
   original.package.name: sys-apps/lsb-release
   original.package.slot: "0"
   original.package.version: 1.4-r3
