--- a/packages/atoms/power/sys-apps/i2c-tools/build.yaml
+++ b/packages/atoms/power/sys-apps/i2c-tools/build.yaml
@@ -1,7 +1,10 @@
 prelude:
 # Temporary
 - >-
-  luet repo update && luet upgrade -y && luet cleanup
+  luet repo update && luet upgrade -y && luet cleanup &&
+  cp i2c-tools-4.3.ebuild /var/git/extra-kits/geaaru-kit/sys-apps/i2c-tools/ &&
+  cd /var/git/extra-kits/geaaru-kit/sys-apps/i2c-tools/ &&
+  ebuild i2c-tools-4.3.ebuild digest
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
