--- a/packages/macaroni/pinentry/collection.yaml
+++ b/packages/macaroni/pinentry/collection.yaml
@@ -23,18 +23,24 @@ packages:
     name: "pinentry-qt"
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Qt
     includes:
+      - /usr$
+      - /usr/bin$
       - /usr/bin/pinentry-qt5
       - /usr/bin/pinentry-qt
 
   - <<: *package
     name: "pinentry-gnome"
-    version: 1.2.1+1
+    version: 1.2.1+2
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Gnome
     includes:
-      - /usr/bin/pinentry-gnome
+      - /usr$
+      - /usr/bin$
+      - /usr/bin/pinentry-gnome3
 
   - <<: *package
     name: "pinentry-efl"
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Enlightenment.
     includes:
+      - /usr$
+      - /usr/bin$
       - /usr/bin/pinentry-efl
